--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "puppeteer-afp",
+  "name": "puppeteer-afp-with-vendor",
   "version": "1.1.7",
   "description": "Stop website fingerprinting techniques",
   "main": "index.js",
